--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,21 +6,61 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
+<body>
 <div th:include="navbar :: navbar">...</div>
-<div th:if="${error}" class="alert alert-danger">
-    <p th:text="${error}">Pogresan email ili lozinka</p>
+<div class="wrapper">
+    <h1>Vesti</h1>
+
+    <table class="table table-sm table-dark" style="width: 50vw; margin: auto; visibility: hidden; " th:style="${style}">
+        <thead>
+        <tr >
+            <th scope="col" >Testirani</th>
+            <th scope="col">Zarazeni</th>
+            <th scope="col">Hospitalizovani</th>
+            <th scope="col">Na respiratoru</th>
+            <th scope="col">Svi zarazeni</th>
+
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td th:text="${tested}"></td>
+            <td th:text="${infected}"></td>
+            <td th:text="${hospitalized}"></td>
+            <td th:text="${respirator}"></td>
+            <td th:text="${allinf}"></td>
+
+        </tr>
+
+        </tbody>
+    </table>
+    <div class="cards"  th:each="news : ${allNews}" >
+        <div class="card" style="width: 400px;">
+            <h2 th:text="${news.name}"></h2>
+            <p th:text="${news.content}"></p>
+            <p th:text="${news.date}"></p>
+        </div>
+    </div>
+    <a th:href="@{'/loginn'}" class="btn btn-primary btn-lg " role="button" aria-disabled="true" style="margin: 10px;" >Login</a>
+    <a th:href="@{'/user/new'}" class="btn btn-primary btn-lg " role="button" aria-disabled="true">Registracija</a>
 </div>
-<form th:action="@{/loginn/save}" method="post" style="width: 40vw; margin: auto; padding-top:200px">
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Unesite email">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<a href="" th:href="@{'/user/new'}" class="btn btn-primary btn-lg " style=" margin-left: 30vw; margin-top: 10px;" role="button"  >Registracija</a>
+<style>
+    .card{
+        display: flex;
+        padding: 10px;
+        border-radius: 15px;
+        background-color: #d0fff7;
+        margin: 30px;
+    }
+    h1{
+        text-align: center;
+    }
+    .wrapper{
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+</style>
 </body>
 </html>
