--- a/src/main/resources/templates/infected.html
+++ b/src/main/resources/templates/infected.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
+<div th:include="navbar :: navbar">...</div>
 <table class="table table-sm table-dark" style="width: 50vw; margin: auto;">
   <thead>
   <tr >
@@ -34,7 +35,7 @@
       <a th:href="@{'/infected/delete/' + ${infected.id}}" class="btn btn-primary btn-lg " role="button" aria-disabled="true">Delete</a>
     </td>
   </tr>
-  <a th:href="@{'/infected/new'}" style="margin: 50px" class="btn btn-primary btn-lg " role="button" aria-disabled="true" >Novi Pacijent</a>
+  <a th:href="@{'/infected/new'}" style="margin: 50px" class="btn btn-primary btn-lg " role="button" aria-disabled="true" >Nove Vesti o Zarazenima</a>
 
   </tbody>
 </table>
