--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,27 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Nove Veestii</title>
+  <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
-<body>
 <div th:include="navbar :: navbar">...</div>
-<form th:action="@{/news/save}" method="post" th:object="${news}" style="width: 50vw; margin: auto;">
-  <input type="hidden"  th:field="*{id}">
+<div th:if="${error}" class="alert alert-danger">
+  <p th:text="${error}">Pogresan email ili lozinka</p>
+</div>
+<form th:action="@{/loginn/save}" method="post" style="width: 40vw; margin: auto; padding-top:200px">
   <div class="form-group">
-    <label for="name">Ime</label>
-    <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" th:field="*{name}" >
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Unesite email">
   </div>
   <div class="form-group">
-    <label for="country">Post</label>
-    <input type="text" class="form-control" id="country" placeholder="Enter Country" th:field="*{content}">
-  </div>
-  <div class="form-group">
-    <label >Datum</label>
-    <input type="datetime-local" class="form-control"  placeholder="Enter Country" th:field="*{date}">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+<a href="" th:href="@{/user/new}" class="btn btn-primary btn-lg " style=" margin-left: 30vw; margin-top: 10px;" role="button"  >Registracija</a>
 </body>
 </html>
