--- a/src/main/resources/templates/newInfected.html
+++ b/src/main/resources/templates/newInfected.html
@@ -7,7 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
+<div th:include="navbar :: navbar">...</div>
 <form th:action="@{/infected/save}" method="post" th:object="${infected}" style="width: 50vw; margin: auto;">
   <input type="hidden"  th:field="*{id}">
   <div class="form-group">
