--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -8,6 +8,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
+<div th:include="navbar :: navbar">...</div>
+<div style="display: flex; flex-direction: column; align-content: center;">
+<p>Primljene Vakcine</p>
+<p th:text="${patient.getReceived()}"></p>
+</div>
 <form th:action="@{/user/save}" onsubmit="return CheckPasswords()" method="post" th:object="${user}" style="width: 50vw; margin: auto;">
   <input type="hidden"  th:field="*{id}">
   <div class="form-group">
