--- a/src/main/resources/templates/vaccine.html
+++ b/src/main/resources/templates/vaccine.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
+<div th:include="navbar :: navbar">...</div>
 <table class="table table-sm table-dark" style="width: 50vw; margin: auto;">
   <thead>
   <tr >
