--- a/src/main/resources/templates/vaccinesearchresult.html
+++ b/src/main/resources/templates/vaccinesearchresult.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Search Results</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div th:include="navbar :: navbar">...</div>
@@ -17,7 +20,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="vaccine : ${searchResults}">
+  <tr th:each="vaccine : ${vaccines}">
     <td th:text="${vaccine.id}"></td>
     <td th:text="${vaccine.name}"></td>
     <td th:text="${vaccine.available}"></td>
